--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: "Iransans";
     src: url("/font/IranSansWeb-FaNum-Light.eot"),
       url("/font/IranSansWeb-FaNum-Light.woff2") format("woff2"),
@@ -23,7 +23,7 @@
   //     url("/font/fontawesome-webfont.woff") format("woff"),
   //     url("/font/fontawesome-webfont.ttf") format("truetype"),
   //     url("/font/fontawesome-webfont.svg") format("svg")
-  // } */
+  // }
   
   @font-face {
     font-family: "Iransans-medium";
@@ -35,7 +35,7 @@
   @font-face {
     font-family: "Iransans-ulight";
     src: url("/font/IRANSansWeb_UltraLight.eot"), url("/font/IRANSansWeb_UltraLight.woff2");
-  }
+  } */
   
   html {
     overflow-y: scroll;
@@ -45,7 +45,7 @@
     overflow: hidden;
   }
   
-  body,
+  /* body,
   div,
   span,
   p,
@@ -59,5 +59,5 @@
   a {
     font-family: Iransans, "Segoe UI", Tahoma, FontAwesome, Iransans-bold,
       Iransans-medium sans-serif !important;
-  }
+  } */
   
